<resources>
    <string name="app_name">part2</string>
    <string name="courses_list_content_description">List of courses</string>
    <string name="course_code">Course Code</string>
    <string name="course_name">Course Name</string>
    <string name="lecturer_name">Lecturer Name</string>

    <string name="add_course">Add New Course</string>
    <string name="course_code_hint">Course Code</string>
    <string name="course_name_hint">Course Name</string>
    <string name="lecturer_name_hint">Lecturer Name</string>
    <string name="create_button_text">Create</string>

    <string name="student_name">Student Name</string>
    <string name="student_email">Student Email</string>
    <string name="student_matric_number">Student Matric Number</string>

    <string name="add_student">Add New Student</string>
    <string name="student_name_hint">Student Name</string>
    <string name="student_email_hint">Student Email</string>
    <string name="student_matric_number_hint">Student Matric Number</string>
    <string name="create_student_text">Create</string>


    //Q7
    <string name="student_matric_hint">Matric Number</string>
    <string name="save_button">Save</string>

</resources>