<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/editCourseCode"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:autofillHints="@string/course_code_hint"
        android:hint="@string/course_code_hint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editCourseName"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/course_name_hint"
        android:hint="@string/course_name_hint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editCourseCode" />

    <EditText
        android:id="@+id/editLecturerName"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/lecturer_name_hint"
        android:hint="@string/lecturer_name_hint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editCourseName" />

    <Button
        android:id="@+id/createCourseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_button_text"
        app:layout_constraintTop_toBottomOf="@id/editLecturerName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
