<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/holo_blue_light"
    android:layout_marginTop="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- TextView for course code -->

    <!-- TextView for course name -->

    <!-- TextView for lecturer name -->
<!--    Add Button instead of TextView-->
    <TextView
        android:id="@+id/textCourseCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/course_code"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textCourseName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/course_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textCourseCode" />

    <TextView
        android:id="@+id/textLecturerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lecturer_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textCourseName"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
