<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/courseLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/holo_red_light"
    android:layout_marginTop="20dp"
    android:clickable="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- TextView for student name -->

    <!-- TextView for student email -->

    <!-- TextView for student matric number -->
    <TextView
        android:id="@+id/textStudentName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/student_name"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textStudentEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/student_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textStudentName" />

    <TextView
        android:id="@+id/textStudentMatricNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/student_matric_number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textStudentEmail"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
